# eyetea

./: .gitignore  LICENSE  README.md  pyproject.toml
source/eyetea/: __main__.py  events.py  utilities.py
source/eyetea/server/: __init__.py  downloads.py  pastables.py  uploads.py
source/eyetea/server/shells/: __init__.py  reverse.py  utilities.py
source/eyetea/server/templates/shells/reverse/: linux_bash.jinja  linux_host.jinja  linux_host_auto.jinja  linux_python.jinja  linux_python3.jinja  linux_target.jinja  windows_powershell.jinja  windows_python.jinja  windows_python3.jinja  windows_target.jinja
source/eyetea/server/templates/shells/utilities/: linux_bash.jinja  linux_target.jinja  windows_powershell.jinja  windows_target.jinja
source/eyetea/ui/: __init__.py  widgets.py
source/eyetea/ui/static/: eyetea.tcss
