[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
authors = ['Andrew Fricke <andrew@uhnomoli.com>']
description = 'A pentesting tool that streamlines data transfer and shell access'
homepage = 'https://github.com/uhnomoli/eyetea'
license = 'BSD-3-Clause'
name = 'eyetea'
readme = 'README.md'
repository = 'https://github.com/uhnomoli/eyetea'
version = '0.1.0'

[tool.poetry.dependencies]
python = '^3.11'
flask = '^3.0.3'
textual = "^0.73.0"

[[tool.poetry.packages]]
from = 'source'
include = 'eyetea'

[tool.poetry.scripts]
eyetea = 'eyetea.__main__:main'

[tool.poetry.group.dev.dependencies]
textual-dev = "^1.5.1"

